added contact page

--- a/library.html
+++ b/library.html
@@ -47,7 +47,7 @@
 			<div class="section-three" style="background-color: #fff;">
 				<div class="wrapper">
 					<div class="center-block">
-						<a class="iconz"><span class="fadeIn">Print</span><img src="img/print-icon.png"/></a>
+						<a class="iconz"><span class="fadeIn">Print</span><img src="img/icons/print-icon.png"/></a>
 					</div>
 					<div class="left">
 						<h3>The Challenge</h3>
