--- a/pc.html
+++ b/pc.html
@@ -54,13 +54,13 @@
 			<div class="section-three" style="background-color: #fff;">
 				<div class="wrapper">
 					<div class="center-block">
-						<a class="iconz"><span class="fadeIn">Print</span><img src="img/print-icon.png"/></a>
-						<a class="iconz"><span class="fadeIn">Web</span><img src="img/web-icon.png"/></a>
-						<a class="iconz"><span class="fadeIn">Video</span><img src="img/video-icon.png"/></a>
-						<a class="iconz"><span class="fadeIn">Branding</span><img src="img/branding-icon.png"/></a>
-						<a class="iconz"><span class="fadeIn">Marketing</span><img src="img/marketing-icon.png"/></a>
-						<a class="iconz"><span class="fadeIn">Social</span><img src="img/social-icon.png"/></a>
-						<a class="iconz"><span class="fadeIn">Email</span><img src="img/email-icon.png"/></a>
+						<a class="iconz"><span class="fadeIn">Print</span><img src="img/icons/print-icon.png"/></a>
+						<a class="iconz"><span class="fadeIn">Web</span><img src="img/icons/web-icon.png"/></a>
+						<a class="iconz"><span class="fadeIn">Video</span><img src="img/icons/video-icon.png"/></a>
+						<a class="iconz"><span class="fadeIn">Branding</span><img src="img/icons/branding-icon.png"/></a>
+						<a class="iconz"><span class="fadeIn">Marketing</span><img src="img/icons/marketing-icon.png"/></a>
+						<a class="iconz"><span class="fadeIn">Social</span><img src="img/icons/social-icon.png"/></a>
+						<a class="iconz"><span class="fadeIn">Email</span><img src="img/icons/email-icon.png"/></a>
 					</div>
 					<div class="left">
 						<h3>The Challenge</h3>
