--- a/f1.html
+++ b/f1.html
@@ -38,8 +38,8 @@
 			<div class="section-three" style="background-color: #ece9db;">
 				<div class="wrapper">
 					<div class="center-block">
-						<a class="iconz"><span class="fadeIn">Print</span><img src="img/print-icon.png"/></a>
-						<a class="iconz"><span class="fadeIn">Branding</span><img src="img/branding-icon.png"/></a>
+						<a class="iconz"><span class="fadeIn">Print</span><img src="img/icons/print-icon.png"/></a>
+						<a class="iconz"><span class="fadeIn">Branding</span><img src="img/icons/branding-icon.png"/></a>
 					</div>
 					<div class="left">
 						<h3>The Challenge</h3>
