--- a/index.html
+++ b/index.html
@@ -40,9 +40,8 @@
 					<img class="fallback" src="img/vid1.png"/>
 					<h1>trusted by the world's most beloved brands</h1>
 					<div class="owl-carousel-inner graphic">
-						<div class="item"><img class="center-image" src="img/adidas-logo.png"/></div>
-						<div class="item"><img class="center-image" src="img/adidas-logo.png"/></div>
-						<div class="item"><img class="center-image" src="img/adidas-logo.png"/></div>
+						<div class="item"><img class="center-image" src="img/10-logo.png"/></div>
+						<div class="item"><img class="center-image" src="img/20-logo.png"/></div>
 					</div>
 					<a href="work.html" class="fade-effect">view our clients</a>
 				</div>
@@ -51,16 +50,15 @@
 					<img class="fallback" src="img/vid2.png"/>
 					<h1>trusted by the world's most beloved brands</h1>
 					<div class="owl-carousel-inner graphic">
-						<div class="item"><img class="center-image" src="img/adidas-logo.png"/></div>
-						<div class="item"><img class="center-image" src="img/adidas-logo.png"/></div>
-						<div class="item"><img class="center-image" src="img/adidas-logo.png"/></div>
+						<div class="item"><img class="center-image" src="img/10-logo.png"/></div>
+						<div class="item"><img class="center-image" src="img/20-logo.png"/></div>
 					</div>
 					<a href="work.html" class="fade-effect">view our clients</a>
 				</div>
 			</div>
 			<div class="wrapper">
-				<img class="prev" src="img/left-arrow.png" onclick="$('.owl-carousel-outer').trigger('owl.prev');"></img>
-				<img class="next" src="img/right-arrow.png" onclick="$('.owl-carousel-outer').trigger('owl.next');"></img>
+				<img class="prev" src="img/left-arrow.png" onclick="$('.owl-carousel-outer').trigger('owl.prev');"/>
+				<img class="next" src="img/right-arrow.png" onclick="$('.owl-carousel-outer').trigger('owl.next');"/>
 				<h2 class="loader">loading creativity...</h2>
 			</div>
 		</div>
@@ -71,17 +69,17 @@
 				<div class="gallery">
 					<div class="ftg-filters">
 						<a href="#" class="iconz">SHOW ALL<span class="fadeIn">:D</span></a>
-						<a href="#cat-1" class="iconz"><span class="fadeIn">Print</span><img src="img/print-icon.png"/></a>
-						<a href="#cat-2" class="iconz"><span class="fadeIn">Mobile</span><img src="img/mobile-icon.png"/></a>
-						<a href="#cat-3" class="iconz"><span class="fadeIn">Web</span><img src="img/web-icon.png"/></a>
-						<a href="#cat-1" class="iconz"><span class="fadeIn">Video</span><img src="img/video-icon.png"/></a>
-						<a href="#cat-2" class="iconz"><span class="fadeIn">Branding</span><img src="img/branding-icon.png"/></a>
-						<a href="#cat-3" class="iconz"><span class="fadeIn">Strategy</span><img src="img/strategy-icon.png"/></a>
-						<a href="#cat-1" class="iconz"><span class="fadeIn">Marketing</span><img src="img/marketing-icon.png"/></a>
-						<a href="#cat-2" class="iconz"><span class="fadeIn">Illustrations</span><img src="img/illustrations-icon.png"/></a>
-						<a href="#cat-3" class="iconz"><span class="fadeIn">Social</span><img src="img/social-icon.png"/></a>
-						<a href="#cat-1" class="iconz"><span class="fadeIn">Email</span><img src="img/email-icon.png"/></a>
-						<a href="#cat-2" class="iconz"><span class="fadeIn">Photography</span><img src="img/photography-icon.png"/></a>
+						<a href="#cat-1" class="iconz"><span class="fadeIn">Print</span><img src="img/icons/print-icon.png"/></a>
+						<a href="#cat-2" class="iconz"><span class="fadeIn">Mobile</span><img src="img/icons/mobile-icon.png"/></a>
+						<a href="#cat-3" class="iconz"><span class="fadeIn">Web</span><img src="img/icons/web-icon.png"/></a>
+						<a href="#cat-1" class="iconz"><span class="fadeIn">Video</span><img src="img/icons/video-icon.png"/></a>
+						<a href="#cat-2" class="iconz"><span class="fadeIn">Branding</span><img src="img/icons/branding-icon.png"/></a>
+						<a href="#cat-3" class="iconz"><span class="fadeIn">Strategy</span><img src="img/icons/strategy-icon.png"/></a>
+						<a href="#cat-1" class="iconz"><span class="fadeIn">Marketing</span><img src="img/icons/marketing-icon.png"/></a>
+						<a href="#cat-2" class="iconz"><span class="fadeIn">Illustrations</span><img src="img/icons/illustrations-icon.png"/></a>
+						<a href="#cat-3" class="iconz"><span class="fadeIn">Social</span><img src="img/icons/social-icon.png"/></a>
+						<a href="#cat-1" class="iconz"><span class="fadeIn">Email</span><img src="img/icons/email-icon.png"/></a>
+						<a href="#cat-2" class="iconz"><span class="fadeIn">Photography</span><img src="img/icons/photography-icon.png"/></a>
 					</div>
 					
 					<div class="ftg-items">
@@ -142,27 +140,27 @@
 					<div class="item">
 						<img src="img/03-logo.jpg"/>
 						<p>Natural Reflection</p>
-						<p>Designer and builder of luxury pools and spas</p>
+						<p>Designer and builder of luxury pools and spas.</p>
 					</div>
 					<div class="item">
 						<img src="img/04-logo.jpg"/>
 						<p>Astancia Development Group</p>
-						<p>Log and branding solution for a high-end land development group</p>
+						<p>Logo and branding solution for a high-end land development group.</p>
 					</div>
 					<div class="item">
 						<img src="img/05-logo.jpg"/>
 						<p>Mobistro</p>
-						<p>Developer of mobile phone solutions for the restaurant industry</p>
+						<p>Developer of mobile phone solutions for the restaurant industry.</p>
 					</div>
 					<div class="item">
 						<img src="img/06-logo.jpg"/>
 						<p>Wilson Capital</p>
-						<p>Capitall development group for buildings and real estate</p>
+						<p>Capital development group for buildings and real estate.</p>
 					</div>
 					<div class="item">
 						<img src="img/07-logo.jpg"/>
 						<p>Urban Pasta is a purveyor of homemade pastas and other delicious sundries.</p>
-						<p>The brand is designed to imply a simple, tasteful plate of pasta</p>
+						<p>The brand is designed to imply a simple, tasteful plate of pasta.</p>
 					</div>
 					<div class="item">
 						<img src="img/08-logo.jpg"/>
@@ -193,7 +191,7 @@
 		<script>
 			$( document ).ready(function() {
 				$('.gallery').finalTilesGallery({ margin: 12, gridCellSize: 12, imageSizeFactor: 1, minTileWidth: 100});
-				$(".header-one .owl-carousel-outer").owlCarousel({ slideSpeed : 500, pagination: true,  autoPlay: false, singleItem : true, mouseDrag:true, touchDrag:true, afterMove : animate	});
+				$(".header-one .owl-carousel-outer").owlCarousel({ slideSpeed : 500, pagination: true,  autoPlay: false, singleItem : true, mouseDrag:false, touchDrag:false, afterMove : animate	});
 				$(".header-one .owl-carousel-inner").owlCarousel({ slideSpeed : 300, pagination: false, autoPlay: true,  singleItem : true, mouseDrag:false, touchDrag:false,  });
 				$(".section-two .owl-carousel").owlCarousel({items:5,itemsDesktop : [5000,1],itemsDesktopSmall: [640,1],itemsTablet: [480,1],itemsMobile : false,navigation : true,slideSpeed : 300, paginationSpeed : 400,navigationText: ["",""],pagination: false,autoPlay: false	});
 				$(window).trigger("resize"); //trigger resize event
@@ -218,7 +216,10 @@
 			//fade in graphic after each video plays completely
 			$('.header-one video').each(function(index){ 
 				$(this).attr('id','vid'+(index+1));
-				if (!isMobile()){ $(this).on('ended',function(){ $(".graphic").fadeIn(500); }); }
+				if (!isMobile()){ $(this).on('ended',function(){ 
+                    $(this).closest(".item").find(".graphic").fadeIn(500); //fade in nearest logo
+                    $(this).closest(".item").find(".graphic").data('owlCarousel').jumpTo(0); //reset to start
+                });}
 			});
 			
 			//resize nav when scrolling downwards
