added and polished stuff

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 					<img class="button fade-effect" src="img/nav-button.png"/>
 					<div class="nav-items fade-effect">
 						<!--<a class="fade-effect" href="work.html">work</a>-->
-						<a class="fade-effect" href="results.html">results</a>
+						<!--<a class="fade-effect" href="results.html">results</a>-->
 						<a class="fade-effect" href="about.html">about</a>
 						<a class="fade-effect" href="contact.html">contact</a>
 					</div>
@@ -74,12 +74,12 @@
 						<a href="#cat-3" class="iconz"><span class="fadeIn">Web</span><img src="img/icons/web-icon.png"/></a>
 						<a href="#cat-1" class="iconz"><span class="fadeIn">Video</span><img src="img/icons/video-icon.png"/></a>
 						<a href="#cat-2" class="iconz"><span class="fadeIn">Branding</span><img src="img/icons/branding-icon.png"/></a>
-						<a href="#cat-3" class="iconz"><span class="fadeIn">Strategy</span><img src="img/icons/strategy-icon.png"/></a>
+						<a href="#cat-3" class="iconz"><span class="fadeIn">Advertising</span><img src="img/icons/advertising-icon.png"/></a>
 						<a href="#cat-1" class="iconz"><span class="fadeIn">Marketing</span><img src="img/icons/marketing-icon.png"/></a>
 						<a href="#cat-2" class="iconz"><span class="fadeIn">Illustrations</span><img src="img/icons/illustrations-icon.png"/></a>
 						<a href="#cat-3" class="iconz"><span class="fadeIn">Social</span><img src="img/icons/social-icon.png"/></a>
 						<a href="#cat-1" class="iconz"><span class="fadeIn">Email</span><img src="img/icons/email-icon.png"/></a>
-						<a href="#cat-2" class="iconz"><span class="fadeIn">Photography</span><img src="img/icons/photography-icon.png"/></a>
+						<a href="#cat-2" class="iconz"><span class="fadeIn">Awards</span><img src="img/icons/awards-icon.png"/></a>
 					</div>
 					
 					<div class="ftg-items">
