--- a/mms.html
+++ b/mms.html
@@ -25,7 +25,7 @@
 					<img class="button fade-effect" src="img/nav-button.png"/>
 					<div class="nav-items fade-effect">
 						<!--<a class="fade-effect" href="work.html">work</a>-->
-						<a class="fade-effect" href="results.html">results</a>
+						<!--<a class="fade-effect" href="results.html">results</a>-->
 						<a class="fade-effect" href="about.html">about</a>
 						<a class="fade-effect" href="contact.html">contact</a>
 					</div>
