--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
 			<div class="wrapper">
 				<img class="prev" src="img/left-arrow.png" onclick="$('.owl-carousel-outer').trigger('owl.prev');"/>
 				<img class="next" src="img/right-arrow.png" onclick="$('.owl-carousel-outer').trigger('owl.next');"/>
-				<h2 class="loader">loading creativity...</h2>
+				<img class="loader" src="img/loading.gif"/>
+                <!--<h2 class="loader">loading creativity...</h2>-->
 			</div>
 		</div>
 		
@@ -159,13 +160,11 @@
 					</div>
 					<div class="item">
 						<img src="img/07-logo.jpg"/>
-						<p>Urban Pasta is a purveyor of homemade pastas and other delicious sundries.</p>
-						<p>The brand is designed to imply a simple, tasteful plate of pasta.</p>
+						<p>Urban Pasta is a purveyor of homemade pastas and other delicious sundries. The brand is designed to imply a simple, tasteful plate of pasta.</p>
 					</div>
 					<div class="item">
 						<img src="img/08-logo.jpg"/>
-						<p>The Nanny Works brand and logo is inspired by the idea of a protective umbrella</p>
-						<p>and the famous nanny from children's literature who carried one.</p>
+						<p>The Nanny Works brand and logo is inspired by the idea of a protective umbrella and the famous nanny from children's literature who carried one.</p>
 					</div>
 					<div class="item">
 						<img src="img/18-logo.jpg"/>
