--- a/index.html
+++ b/index.html
@@ -85,52 +85,48 @@
 					
 					<div class="ftg-items">
 						<article class="tile ftg-cat-1 ftg-cat-2">
-							<a class="tile-inner" href="work-1.html"><img class="item" src="img/choice-thumb.jpg">
+							<a class="tile-inner" href="gonotes.html"><img class="item" src="img/18-thumb.jpg">
 							<div class="caption"></div></a>
 						</article>
 						<article class="tile ftg-cat-2">
-							<a class="tile-inner" href="work-2.html"><img class="item" src="img/adidas-thumb.jpg">
+							<a class="tile-inner" href="library.html"><img class="item" src="img/11-thumb.jpg">
 							<div class="caption"></div></a>
 						</article>
 						<article class="tile ftg-cat-3">
-							<a class="tile-inner" href="work-3.html"><img class="item" src="img/library-thumb.jpg">
+							<a class="tile-inner" href="skytouch.html"><img class="item" src="img/16-thumb.jpg">
 							<div class="caption"></div></a>
 						</article>
 						<article class="tile ftg-cat-1">
-							<a class="tile-inner" href="work-4.html"><img class="item" src="img/hinkleys-thumb.jpg">
+							<a class="tile-inner" href="f1.html"><img class="item" src="img/13-thumb.jpg">
 							<div class="caption"></div></a>
 						</article>
 						<article class="tile ftg-cat-2">
-							<a class="tile-inner" href="work-5.html"><img class="item" src="img/fl-thumb.jpg">
+							<a class="tile-inner" href="jack.html"><img class="item" src="img/09-thumb.jpg">
 							<div class="caption"></div></a>
 						</article>
 						<article class="tile ftg-cat-3">
-							<a class="tile-inner" href="work-6.html"><img class="item" src="img/natural-thumb.jpg">
+							<a class="tile-inner" href="mms.html"><img class="item" src="img/19-thumb.jpg">
 							<div class="caption"></div></a>
 						</article>
 						<article class="tile ftg-cat-1">
-							<a class="tile-inner" href="work-7.html"><img class="item" src="img/lamp-thumb.jpg">
+							<a class="tile-inner" href="bluesquare.html"><img class="item" src="img/21-thumb.jpg">
 							<div class="caption"></div></a>
 						</article>
 						<article class="tile ftg-cat-2">
-							<a class="tile-inner" href="work-8.html"><img class="item" src="img/shc-thumb.jpg">
+							<a class="tile-inner" href="pc.html"><img class="item" src="img/02-thumb.jpg">
 							<div class="caption"></div></a>
 						</article>
 						<article class="tile ftg-cat-3">
-							<a class="tile-inner" href="work-9.html"><img class="item" src="img/cloud-thumb.jpg">
+							<a class="tile-inner" href="kyle.html"><img class="item" src="img/0902-thumb.jpg">
 							<div class="caption"></div></a>
 						</article>
 						<article class="tile ftg-cat-1">
-							<a class="tile-inner" href="work-10.html"><img class="item" src="img/motorola-thumb.jpg">
-							<div class="caption"></div></a>
-						</article>
-						<article class="tile ftg-cat-2">
-							<a class="tile-inner" href="work-11.html"><img class="item" src="img/woopie-thumb.jpg">
+							<a class="tile-inner" href="shc.html"><img class="item" src="img/01-thumb.jpg">
 							<div class="caption"></div></a>
 						</article>
 					</div>
 				</div>
-				<a href="work.html" class="large-button fade-effect">view clients</a>
+				<!--<a href="work.html" class="large-button fade-effect">view clients</a>-->
 			</div>
 		</div>
 		
