--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 				</div>
 				<div class="item">
 					<video><source src="video/vid2.mp4" type="video/mp4" /></video>
-					<img class="fallback" src="img/vid2.png"/>
+					<img class="fallback" src="img/vid2.jpg"/>
 					<h1>trusted by the world's most beloved brands</h1>
 					<div class="owl-carousel-inner graphic">
 						<div class="item"><img class="center-image" src="img/10-logo.png"/></div>
