--- a/mms.html
+++ b/mms.html
@@ -145,18 +145,22 @@
 
 				//resize nav when scrolling downwards
                 var timer = null;
-                var delay = 500;
-                timer = setTimeout( function(){ $('.side-nav').css("right","-48px"); },delay*5);
+                var delay = isMobile() ? 500 : 500;
+                var amount = isMobile() ? "-64px" : "-48px";
+                timer = setTimeout( function(){ $('.side-nav').css("right",amount); },delay*5);
 				$(window).scroll(function(){ 
                     if ($('body').scrollTop() > 0) { 
                         $('.nav').addClass('small'); 
-                        //$('.side-nav').css("right","0px");
-                        //if (timer) { clearTimeout(timer); timer = null; } timer = setTimeout( function(){ $('.side-nav').css("right","-48px"); },delay);
+                        if (isMobile()){
+                            $('.side-nav').css("right","0px");
+                            if (timer) { clearTimeout(timer); timer = null; } timer = setTimeout( function(){ $('.side-nav').css("right",amount); },delay);
+                        }
                     } 
                     else { $('.nav').removeClass('small'); }
                 });
-                $('.side-nav').hover(function() { if (timer) { clearTimeout(timer); timer = null; } $('.side-nav').css("right","0px"); },function() { if (timer) { clearTimeout(timer); timer = null; } timer = setTimeout( function(){ $('.side-nav').css("right","-48px"); },delay); });
-				function isMobile(){ return /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ? true:false; }
+                $('.side-nav').hover(function() { if (timer) { clearTimeout(timer); timer = null; } $('.side-nav').css("right","0px"); },function() { if (timer) { clearTimeout(timer); timer = null; } timer = setTimeout( function(){ $('.side-nav').css("right",amount); },delay); });
+				//check if mobile
+                function isMobile(){ return /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ? true:false; }
 			</script>
 		</div> <!--end of skrollr body-->
 	</body>
