updated mobile navigation

--- a/f1.html
+++ b/f1.html
@@ -150,21 +150,26 @@
 					$("#bg4").backstretch("img/13-header4.jpg");
 				}
 				
-                //resize nav when scrolling downwards
+                //resize nav when scrolling downwards (mobile)
                 var timer = null;
-                var delay = isMobile() ? 500 : 500;
+                var delay = isMobile() ? 4000 : 500;
                 var amount = isMobile() ? "-64px" : "-48px";
                 timer = setTimeout( function(){ $('.side-nav').css("right",amount); },delay*5);
 				$(window).scroll(function(){ 
                     if ($('body').scrollTop() > 0) { 
                         $('.nav').addClass('small'); 
                         if (isMobile()){
-                            $('.side-nav').css("right","0px");
-                            if (timer) { clearTimeout(timer); timer = null; } timer = setTimeout( function(){ $('.side-nav').css("right",amount); },delay);
+                            $('.side-nav').css("right",amount);
+                            clearTimeout($.data(this, 'scrollTimer'));
+                            $.data(this, 'scrollTimer', setTimeout(function() {
+                                $('.side-nav').css("right","0px");
+                                if (timer) { clearTimeout(timer); timer = null; } timer = setTimeout( function(){ $('.side-nav').css("right",amount); },delay);
+                            }, 250));
                         }
                     } 
                     else { $('.nav').removeClass('small'); }
                 });
+                //desktop usability
                 $('.side-nav').hover(function() { if (timer) { clearTimeout(timer); timer = null; } $('.side-nav').css("right","0px"); },function() { if (timer) { clearTimeout(timer); timer = null; } timer = setTimeout( function(){ $('.side-nav').css("right",amount); },delay); });
 				//check if mobile
                 function isMobile(){ return /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ? true:false; }
