--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
 					
 					<div class="ftg-items">
 						<article class="tile ftg-cat-1 ftg-cat-2">
-							<a class="tile-inner" href="gonotes.html"><img class="item" src="img/18-thumb.jpg">
-							<div class="caption"></div></a>
+							<a class="tile-inner"><img class="item" src="img/18-thumb.jpg">
+							<div class="caption" style="padding-top: 45%;">coming soon!</div></a>
 						</article>
 						<article class="tile ftg-cat-2">
 							<a class="tile-inner" href="library.html"><img class="item" src="img/11-thumb.jpg">
