--- a/skytouch.html
+++ b/skytouch.html
@@ -41,7 +41,7 @@
         
 		<div id="skrollr-body">
             <div class="header-two" id="bg1" style="background-image: url('img/16-header.jpg'); background-position: center center; background-attachment: fixed;">
-                <div class="wrapper" style="max-width: initial;" data-center-center="background-color: rgba(255,255,255,0);" data-top-bottom="background-color: rgba(255,255,255,1);"></div>
+                <div class="wrapper" style="max-width: 100%;" data-center-center="background-color: rgba(255,255,255,0);" data-top-bottom="background-color: rgba(255,255,255,1);"></div>
             </div>
 
 			<div class="section-three" style="background-color: #fff;">
