--- a/gonotes.html
+++ b/gonotes.html
@@ -41,7 +41,7 @@
         
 		<div id="skrollr-body">
             <div class="header-two" id="bg1" style="background-image: url('img/18-header.jpg'); background-position: center center; background-attachment: fixed;">
-                <div class="wrapper" style="max-width: initial;" data-center-center="background-color: rgba(255,255,255,0);" data-top-bottom="background-color: rgba(255,255,255,1);"></div>
+                <div class="wrapper" style="max-width: 100%;" data-center-center="background-color: rgba(255,255,255,0);" data-top-bottom="background-color: rgba(255,255,255,1);"></div>
             </div>
 
 			<div class="section-three" style="background-color: #fff;">
@@ -87,21 +87,26 @@
                     unmatch : function() { $('#bg1').css('background-image','url(img/18-header.jpg)'); }
                 }, true);
 
-				//resize nav when scrolling downwards
+				//resize nav when scrolling downwards (mobile)
                 var timer = null;
-                var delay = isMobile() ? 500 : 500;
+                var delay = isMobile() ? 4000 : 500;
                 var amount = isMobile() ? "-64px" : "-48px";
                 timer = setTimeout( function(){ $('.side-nav').css("right",amount); },delay*5);
 				$(window).scroll(function(){ 
                     if ($('body').scrollTop() > 0) { 
                         $('.nav').addClass('small'); 
                         if (isMobile()){
-                            $('.side-nav').css("right","0px");
-                            if (timer) { clearTimeout(timer); timer = null; } timer = setTimeout( function(){ $('.side-nav').css("right",amount); },delay);
+                            $('.side-nav').css("right",amount);
+                            clearTimeout($.data(this, 'scrollTimer'));
+                            $.data(this, 'scrollTimer', setTimeout(function() {
+                                $('.side-nav').css("right","0px");
+                                if (timer) { clearTimeout(timer); timer = null; } timer = setTimeout( function(){ $('.side-nav').css("right",amount); },delay);
+                            }, 250));
                         }
                     } 
                     else { $('.nav').removeClass('small'); }
                 });
+                //desktop usability
                 $('.side-nav').hover(function() { if (timer) { clearTimeout(timer); timer = null; } $('.side-nav').css("right","0px"); },function() { if (timer) { clearTimeout(timer); timer = null; } timer = setTimeout( function(){ $('.side-nav').css("right",amount); },delay); });
 				//check if mobile
                 function isMobile(){ return /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ? true:false; }
