--- a/library.html
+++ b/library.html
@@ -40,10 +40,10 @@
         </div>
         
 		<div id="skrollr-body">
-			<div class="header-two" id="bg1" style="background-color: #807f7a">
+			<div class="header-two" id="bg1" style="background-image: url('img/11-header5.jpg'); background-position: center center; background-attachment: fixed;">
                 <div class="wrapper">
-					<img src="img/11-header.jpg" style="position: absolute; width: 100%; top: 40%;" 
-                         data-bottom-center="top:40%;" data-top-bottom="top:100%;"/>
+					<!--<img src="img/11-header.jpg" style="position: absolute; width: 100%; top: 40%;" 
+                         data-bottom-center="top:40%;" data-top-bottom="top:100%;"/>-->
 					<div class="headline">
 						<h3>Phoenix Public Library</h3>
 						<h5>Children's Architecture Book</h5>
@@ -56,14 +56,8 @@
 					<div class="center-block">
 						<a class="iconz"><span class="fadeIn">Print</span><img src="img/icons/print-icon.png"/></a>
 					</div>
-					<div class="left">
-						<h3>The Challenge</h3>
-						<p>Education is a powerful tool that the Phoenix Library continually seeks to share with the community on a daily basis, yet needed a way to reach out younger minds in a refreshing manner.</p>
-                    </div>
-					<div class="right">
-						<h3>The Solution</h3>
-						<p>We captured the textures and colors of the beautiful building and compiled all the images in a interactive 3d brochure. Kids now have the opportunity to adventure even deeper into the library while they enjoyed reading their favorite books.</p>
-					</div>
+					<h3>The Solution</h3>
+                    <p>Shapes of the burton Barr Central Library introduces children to architecture by walking through the process of design and ending with paper "building blocks". Children use the blocks to create their own library design.  As children learn about architecture and design, they're also exploring their library. The book's unique shape, die cuts,  and copper ink were inspired by the awarrd-winning architecture of the copper-wrapped library.  When stood up on end, the booklet actually resembles the shape of the library including the buildings "north sails".</p>
 				</div>
 			</div>
 
@@ -102,7 +96,8 @@
 			</div>
 			
 			<div class="header-two" id="bg2" style="background-image: url('img/11-header2.jpg'); background-position: top center; background-attachment: fixed;"></div>
-			<div class="header-two" id="bg3" style="background-image: url('img/11-header3.jpg'); background-position: top center; background-attachment: fixed;"></div>
+			<div class="header-two" id="bg1a" style="background-image: url('img/11-header.jpg'); background-position: top center; background-attachment: fixed;"></div>
+            <div class="header-two" id="bg3" style="background-image: url('img/11-header3.jpg'); background-position: top center; background-attachment: fixed;"></div>
 			<div class="header-two" id="bg4" style="background-image: url('img/11-header4.jpg'); background-position: center center; background-attachment: fixed;"></div>
 			
             <div class="section-three" style="background-color: #b46c36;" >
@@ -132,6 +127,7 @@
 			<script type="text/javascript" src="js/skrollr.menu.min.js"></script>
 			<script type="text/javascript" src="js/jquery.finalTilesGallery.js"></script>
 			<script type="text/javascript" src="js/jquery.backstretch.min.js"></script>
+            <script type="text/javascript" src="js/enquire.min.js"></script>
 			<script>
 				$(document).ready(function() {
 					if (!isMobile()) $(window).resize(function(){$('.header-two').css("height",$(window).height());}); //resize top of the page to match the browser
@@ -145,26 +141,36 @@
 
 				//background fixes for iphone
 				if (isMobile()){
-					//$("#bg1").backstretch("img/11-header.jpg");
+					$("#bg1").backstretch("img/11-header6.jpg");
+                    $("#bg1a").backstretch("img/11-header.jpg");
 					$("#bg2").backstretch("img/11-header2.jpg");
 					$("#bg3").backstretch("img/11-header3.jpg");
 					$("#bg4").backstretch("img/11-header4.jpg");
 				}
-				//resize nav when scrolling downwards
+                enquire.register("screen and (max-width:640px)", { setup : function() { },
+                    match : function() { $('#bg1').css('background-image','url(img/11-header6.jpg)'); },
+                    unmatch : function() { $('#bg1').css('background-image','url(img/11-header5.jpg)'); }
+                }, true);
+				//resize nav when scrolling downwards (mobile)
                 var timer = null;
-                var delay = isMobile() ? 500 : 500;
+                var delay = isMobile() ? 4000 : 500;
                 var amount = isMobile() ? "-64px" : "-48px";
                 timer = setTimeout( function(){ $('.side-nav').css("right",amount); },delay*5);
 				$(window).scroll(function(){ 
                     if ($('body').scrollTop() > 0) { 
                         $('.nav').addClass('small'); 
                         if (isMobile()){
-                            $('.side-nav').css("right","0px");
-                            if (timer) { clearTimeout(timer); timer = null; } timer = setTimeout( function(){ $('.side-nav').css("right",amount); },delay);
+                            $('.side-nav').css("right",amount);
+                            clearTimeout($.data(this, 'scrollTimer'));
+                            $.data(this, 'scrollTimer', setTimeout(function() {
+                                $('.side-nav').css("right","0px");
+                                if (timer) { clearTimeout(timer); timer = null; } timer = setTimeout( function(){ $('.side-nav').css("right",amount); },delay);
+                            }, 250));
                         }
                     } 
                     else { $('.nav').removeClass('small'); }
                 });
+                //desktop usability
                 $('.side-nav').hover(function() { if (timer) { clearTimeout(timer); timer = null; } $('.side-nav').css("right","0px"); },function() { if (timer) { clearTimeout(timer); timer = null; } timer = setTimeout( function(){ $('.side-nav').css("right",amount); },delay); });
 				//check if mobile
                 function isMobile(){ return /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ? true:false; }
