--- a/pc.html
+++ b/pc.html
@@ -154,7 +154,7 @@
 					<h3 style="color: #fff; text-align: left;">Website & Mobile</h3>
 					<img class="fuller stack eighty-five" src="img/02-window1.jpg" style="top: 10%;"
 							 data-bottom-top="top:10%;" data-top-bottom="top:20%; left: -5%"/>
-					<img class="fuller stack thirty" src="img/02-window2.png" style="top: 1%; left: initial;"
+					<img class="fuller stack thirty" src="img/02-window2.png" style="top: 1%; left: auto; right: -5%;"
 							 data-bottom-top="top:10%;" data-top-bottom="top:50%; right: -5%;"/>
 				</div>
 			</div>
@@ -214,19 +214,18 @@
 
 				//resize nav when scrolling downwards (mobile)
                 var timer = null;
-                var delay = isMobile() ? 4000 : 500;
+                var delay = 500;
                 var amount = isMobile() ? "-64px" : "-48px";
+                var lastScrollTop = 0;
                 timer = setTimeout( function(){ $('.side-nav').css("right",amount); },delay*5);
 				$(window).scroll(function(){ 
                     if ($('body').scrollTop() > 0) { 
                         $('.nav').addClass('small'); 
                         if (isMobile()){
-                            $('.side-nav').css("right",amount);
-                            clearTimeout($.data(this, 'scrollTimer'));
-                            $.data(this, 'scrollTimer', setTimeout(function() {
-                                $('.side-nav').css("right","0px");
-                                if (timer) { clearTimeout(timer); timer = null; } timer = setTimeout( function(){ $('.side-nav').css("right",amount); },delay);
-                            }, 250));
+                            var st = $(this).scrollTop();
+                            if (st > lastScrollTop){ $('.side-nav').css("right",amount); } 
+                            else { $('.side-nav').css("right","0px"); }
+                            lastScrollTop = st;
                         }
                     } 
                     else { $('.nav').removeClass('small'); }
