--- a/mms.html
+++ b/mms.html
@@ -57,12 +57,12 @@
 					</div>
 					<div class="left">
 						<h3>The Challenge</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut faucibus felis nec nisl scelerisque placerat. Proin et ligula felis. Fusce tellus ante, fermentum non malesuada at, viverra at quam.</p>
+						<p style="color: #e5e5e5;">coming soon!</p>
                     </div>
 					<div class="right">
 						<h3>The Solution</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut faucibus felis nec nisl scelerisque placerat. Proin et ligula felis. Fusce tellus ante, fermentum non malesuada at, viverra at quam. Change out this text before this is launched</p>
-                    </div>
+                        <p style="color: #e5e5e5;">coming soon!</p>
+				    </div>
 				</div>
 			</div>
 
@@ -145,19 +145,18 @@
 
 				//resize nav when scrolling downwards (mobile)
                 var timer = null;
-                var delay = isMobile() ? 4000 : 500;
+                var delay = 500;
                 var amount = isMobile() ? "-64px" : "-48px";
+                var lastScrollTop = 0;
                 timer = setTimeout( function(){ $('.side-nav').css("right",amount); },delay*5);
 				$(window).scroll(function(){ 
                     if ($('body').scrollTop() > 0) { 
                         $('.nav').addClass('small'); 
                         if (isMobile()){
-                            $('.side-nav').css("right",amount);
-                            clearTimeout($.data(this, 'scrollTimer'));
-                            $.data(this, 'scrollTimer', setTimeout(function() {
-                                $('.side-nav').css("right","0px");
-                                if (timer) { clearTimeout(timer); timer = null; } timer = setTimeout( function(){ $('.side-nav').css("right",amount); },delay);
-                            }, 250));
+                            var st = $(this).scrollTop();
+                            if (st > lastScrollTop){ $('.side-nav').css("right",amount); } 
+                            else { $('.side-nav').css("right","0px"); }
+                            lastScrollTop = st;
                         }
                     } 
                     else { $('.nav').removeClass('small'); }
