--- a/skytouch.html
+++ b/skytouch.html
@@ -57,12 +57,12 @@
 					</div>
 					<div class="left">
 						<h3>The Challenge</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut faucibus felis nec nisl scelerisque placerat. Proin et ligula felis. Fusce tellus ante, fermentum non malesuada at, viverra at quam.</p>
+						<p style="color: #e5e5e5;">coming soon!</p>
                     </div>
 					<div class="right">
 						<h3>The Solution</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut faucibus felis nec nisl scelerisque placerat. Proin et ligula felis. Fusce tellus ante, fermentum non malesuada at, viverra at quam. Change out this text before this is launched</p>
-                    </div>
+                        <p style="color: #e5e5e5;">coming soon!</p>
+				    </div>
 				</div>
 			</div>
 
@@ -100,7 +100,7 @@
 					<h3 style="color: #fff; text-align: left;">Website & Mobile</h3>
 					<img class="fuller stack eighty-five" src="img/16-window.jpg" style="top: 10%;"
 							 data-bottom-top="top:10%;" data-top-bottom="top:20%; left: -5%"/>
-					<img class="fuller stack thirty" src="img/16-window2.png" style="top: 1%; left: initial;"
+					<img class="fuller stack thirty" src="img/16-window2.png" style="top: 1%; left: auto; right: -5%;"
 							 data-bottom-top="top:10%;" data-top-bottom="top:50%; right: -5%;"/>
 				</div>
 			</div>
@@ -167,21 +167,25 @@
                     unmatch : function() { $('#bg1').css('background-image','url(img/16-header.jpg)'); }
                 }, true);
 
-				//resize nav when scrolling downwards
+				//resize nav when scrolling downwards (mobile)
                 var timer = null;
-                var delay = isMobile() ? 500 : 500;
+                var delay = 500;
                 var amount = isMobile() ? "-64px" : "-48px";
+                var lastScrollTop = 0;
                 timer = setTimeout( function(){ $('.side-nav').css("right",amount); },delay*5);
 				$(window).scroll(function(){ 
                     if ($('body').scrollTop() > 0) { 
                         $('.nav').addClass('small'); 
                         if (isMobile()){
-                            $('.side-nav').css("right","0px");
-                            if (timer) { clearTimeout(timer); timer = null; } timer = setTimeout( function(){ $('.side-nav').css("right",amount); },delay);
+                            var st = $(this).scrollTop();
+                            if (st > lastScrollTop){ $('.side-nav').css("right",amount); } 
+                            else { $('.side-nav').css("right","0px"); }
+                            lastScrollTop = st;
                         }
                     } 
                     else { $('.nav').removeClass('small'); }
                 });
+                //desktop usability
                 $('.side-nav').hover(function() { if (timer) { clearTimeout(timer); timer = null; } $('.side-nav').css("right","0px"); },function() { if (timer) { clearTimeout(timer); timer = null; } timer = setTimeout( function(){ $('.side-nav').css("right",amount); },delay); });
 				//check if mobile
                 function isMobile(){ return /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ? true:false; }
